# spotlib-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release-plz.yml
spot-web/: Cargo.toml
spot-web/src/: lib.rs
spotlib/: CHANGELOG.md  Cargo.toml  README.md
spotlib/examples/: spot_test.rs
spotlib/src/: api.rs  client.rs  conn.rs  conn_wasm.rs  error.rs  events.rs  identity.rs  im.rs  lib.rs  packetconn.rs  resolver.rs  store.rs  tlsconn.rs  transport.rs  transport_wasm.rs  utils.rs  ws.rs
spotproto/: CHANGELOG.md  Cargo.toml  README.md
spotproto/src/: clientid.rs  encoding.rs  error.rs  handshake.rs  lib.rs  message.rs  packet.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/scripts/: patch-rng.mjs
web/src/: App.vue  IdCard.vue  purecrypto-shim.js
