[workspace]
resolver = "2"
members = ["spotproto", "spotlib"]

[workspace.package]
edition = "2021"
rust-version = "1.95"
authors = ["Karpelès Lab Inc."]
license = "MIT"
repository = "https://github.com/KarpelesLab/spotlib-rs"

[workspace.dependencies]
purecrypto = "0.6.10"
bottlers = "0.1.0"
# spotlib uses rsurl for the REST API (HTTP GET) and its persistent split
# WebSocket over a custom connector; drop SSH, BitTorrent and IDN from the build.
rsurl = { version = "0.0.11", default-features = false, features = ["purecrypto-tls"] }
ciborium = "0.2"
serde_json = "1"
