[workspace]
resolver = "2"
members = ["spotproto", "spotlib"]
# `spot-web` is a wasm32-only wasm-bindgen wrapper (it depends on spotlib with
# the `native` feature off, which only compiles on wasm32). It is excluded from
# the workspace so native `cargo build`/`clippy` never try to build it; it is
# built on its own by wasm-pack (see the Pages workflow).
exclude = ["spot-web"]

[workspace.package]
edition = "2021"
rust-version = "1.88"
authors = ["Karpelès Lab Inc."]
license = "MIT"
repository = "https://github.com/KarpelesLab/spotlib-rs"

[workspace.dependencies]
purecrypto = "0.6.28"
bottlers = "0.1.2"
# spotlib uses rsurl for the REST API (HTTP GET) and its persistent split
# WebSocket over a custom connector; drop SSH, BitTorrent and IDN from the build.
rsurl = { version = "0.1.6", default-features = false, features = ["purecrypto-tls"] }
ciborium = "0.2"
serde_json = "1"
