[package]
name = "spot-web"
version = "0.1.0"
description = "wasm-bindgen bindings exposing the spotlib browser client to JavaScript"
edition = "2021"
rust-version = "1.88"
authors = ["Karpelès Lab Inc."]
license = "MIT"
repository = "https://github.com/KarpelesLab/spotlib-rs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The browser (async) spotlib: default `native` feature off.
spotlib = { path = "../spotlib", default-features = false }
bottlers = "0.1.2"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
# Smaller wasm; the demo is not perf-sensitive.
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
# Skip wasm-opt: it is a large extra download in CI and unnecessary for a demo.
wasm-opt = false
